# cloudia-api

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  techstack.md  techstack.yml  worker-start.sh
.github/workflows/: main-build.yml  release-push.yml
alembic/: env.py
alembic/versions/: 6e523d653806_init.py  f71ee231a6dc_first_revision.py
app/: initial_data.py  main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: billing.py  carbon_footprint.py  ccf.py  cloud_projects.py  locations.py  login.py  settings.py  users.py  utils.py
app/api/api_v1/helpers/: aws.py  aws_ccft.py  gcp.py
app/api/api_v1/technical/: aws.py  cache.py  ccf.py  dummy.py  gcp.py
app/cache/: redis.py
app/core/: config.py  settings_api.py  variables.py
app/crud/: __init__.py  crud_cloud_project.py  crud_location.py  crud_setting.py  crud_user.py
app/db/: init_db.py  init_db_dev.py  session.py
app/models/: __init__.py  location.py  setting.py  user.py
app/schemas/: __init__.py  ccf.py  cloud_billing.py  cloud_project.py  cloud_provider.py  location.py  setting.py  token.py
app/tests/: conftest.py  dummy.py
app/tests/api/api_v1/: test_locations.py  test_setting.py  test_users.py
app/tests/crud/: test_location.py  test_setting.py
app/tests/utils/: location.py  setting.py  user.py  utils.py
doc/dockerhub/: README.md
