[tool.poetry]
name = "cloudia-api"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
uvicorn = "^0.17.6"
fastapi = "^0.109.2"
python-multipart = "^0.0.9"
email-validator = "^2.1.0"
requests = "^2.31.0"
celery = "^4.4.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^6.3.1"
pydantic = ">=1.4,<2.0"
emails = "0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
jinja2 = "^2.11.3"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
sqlalchemy = "^1.4.51"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^1.0.1"
boto3 = "^1.34.48"
urllib3 = ">=1.25.4,<1.27"
httpx = "^0.27.0"
aioredis = "^2.0.1"
redis = "^5.0.1"
gcloud = "^0.18.3"
google-api-python-client = "^2.119.0"
google-cloud-resource-manager = "^1.12.2"
google-cloud-bigquery = "^3.17.2"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19"
isort = "^4.3"
autoflake = "^1"
flake8 = "^3"
pytest = "^5"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2"
pytest-dotenv = "^0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
